--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,4 +1,15 @@
+.product-container{
+    background-color: green;
+    padding: 10px;
+    position: relative;
+}
 .product-container img{
-    width: 280px;
+    width: 260px;
     height: 230px;
+}
+.btn-cart{
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    bottom: 0;
 }
